@startuml ERD Diagram
!define Table(name,desc) class name as "name\n=====\ndesc" << (T,#FFAAAA) >>
!define primary_key(x) <b>x</b>
!define foreign_key(x) <i>x</i>
!define unique(x) <u>x</u>

' Tables
Table(User, "User accounts and profiles") {
    primary_key(id: UUID)
    foreign_key(country_id: INTEGER)
    first_name: VARCHAR
    last_name: VARCHAR
    unique(username: VARCHAR)
    unique(email: VARCHAR)
    password: VARCHAR
    role: ENUM
    is_active: BOOLEAN
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

Table(Team, "Competition teams") {
    primary_key(id: INTEGER)
    name: VARCHAR
    foreign_key(country_id: INTEGER)
    city: VARCHAR
    institution: VARCHAR
    description: TEXT
    foreign_key(captain_id: UUID)
    foreign_key(competition_id: INTEGER)
    stream_url: VARCHAR
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

Table(Competition, "Robotics competitions") {
    primary_key(id: INTEGER)
    title: VARCHAR
    unique(slug: VARCHAR)
    description: TEXT
    status: ENUM
    location: VARCHAR
    max_teams: INTEGER
    start_date: DATE
    end_date: DATE
    is_active: BOOLEAN
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

Table(TeamMembers, "Team membership") {
    primary_key(id: INTEGER)
    foreign_key(team_id: INTEGER)
    foreign_key(user_id: UUID)
    role: VARCHAR
    joined_at: TIMESTAMP
}

Table(Post, "User posts and content") {
    primary_key(id: INTEGER)
    foreign_key(user_id: UUID)
    title: VARCHAR
    content: TEXT
    is_pinned: BOOLEAN
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

Table(Comment, "Post comments") {
    primary_key(id: INTEGER)
    foreign_key(post_id: INTEGER)
    foreign_key(user_id: UUID)
    content: TEXT
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

Table(Stream, "Live streams") {
    primary_key(id: INTEGER)
    foreign_key(competition_id: INTEGER)
    title: VARCHAR
    description: TEXT
    stream_key: VARCHAR
    is_live: BOOLEAN
    viewer_count: INTEGER
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

Table(Notification, "System notifications") {
    primary_key(id: INTEGER)
    foreign_key(user_id: UUID)
    type: ENUM
    title: VARCHAR
    message: TEXT
    is_read: BOOLEAN
    created_at: TIMESTAMP
}

Table(Country, "Country reference") {
    primary_key(id: INTEGER)
    name: VARCHAR
    code: VARCHAR
}

Table(Media, "File uploads") {
    primary_key(id: INTEGER)
    foreign_key(user_id: UUID)
    filename: VARCHAR
    original_name: VARCHAR
    mime_type: VARCHAR
    size: INTEGER
    path: VARCHAR
    created_at: TIMESTAMP
}

Table(Registration, "Competition registrations") {
    primary_key(id: INTEGER)
    foreign_key(team_id: INTEGER)
    foreign_key(competition_id: INTEGER)
    status: ENUM
    decision_reason: TEXT
    registered_at: TIMESTAMP
}

Table(Sponsor, "Competition sponsors") {
    primary_key(id: INTEGER)
    foreign_key(competition_id: INTEGER)
    name: VARCHAR
    logo_url: VARCHAR
    website: VARCHAR
    created_at: TIMESTAMP
}

Table(SystemLog, "System audit logs") {
    primary_key(id: INTEGER)
    level: ENUM
    message: TEXT
    metadata: JSON
    created_at: TIMESTAMP
}

Table(TeamMessage, "Team chat messages") {
    primary_key(id: INTEGER)
    foreign_key(team_id: INTEGER)
    foreign_key(user_id: UUID)
    message: TEXT
    created_at: TIMESTAMP
}

Table(TeamInvite, "Team invitations") {
    primary_key(id: INTEGER)
    foreign_key(team_id: INTEGER)
    foreign_key(invited_by: UUID)
    email: VARCHAR
    token: VARCHAR
    status: ENUM
    expires_at: TIMESTAMP
    created_at: TIMESTAMP
}

Table(TeamJoinRequest, "Join team requests") {
    primary_key(id: INTEGER)
    foreign_key(team_id: INTEGER)
    foreign_key(user_id: UUID)
    status: ENUM
    message: TEXT
    created_at: TIMESTAMP
}

Table(PostLike, "Post likes") {
    primary_key(id: INTEGER)
    foreign_key(post_id: INTEGER)
    foreign_key(user_id: UUID)
    created_at: TIMESTAMP
}

' Relationships
User ||--o{ TeamMembers : "has many"
User ||--o{ Post : "creates many"
User ||--o{ Comment : "writes many"
User ||--o{ Notification : "receives many"
User ||--o{ Media : "uploads many"
User ||--o{ TeamMessage : "sends many"
User ||--o{ PostLike : "likes many"

Team ||--o{ TeamMembers : "has many"
Team ||--o{ TeamMessage : "has many"
Team ||--o{ TeamInvite : "sends many"
Team ||--o{ TeamJoinRequest : "receives many"
Team ||--o{ Registration : "makes many"

Competition ||--o{ Registration : "receives many"
Competition ||--o{ Stream : "has many"
Competition ||--o{ Sponsor : "has many"
Competition ||--o{ Team : "hosts many"

Post ||--o{ Comment : "has many"
Post ||--o{ PostLike : "receives many"

Country ||--o{ User : "has many"
Country ||--o{ Team : "has many"

@enduml